Adjustments to the makefiles and addition of print* statements to debug why the iri_sub() call stops in FELDCOF() routine?

--- a/pb1/iri/Makefile
+++ b/pb1/iri/Makefile
@@ -7,8 +7,8 @@
 #########################################################################
 
 FC = gfortran    
-FFLAGS = -std=legacy -fPIC -m64
-LFLAGS = -shared -m64
+FFLAGS = -std=legacy -fPIC 
+LFLAGS = -shared 
 OBJECTS = iritest.o irisub.o irifun.o iritec.o iridreg.o igrf.o cira.o iriflip.o
 
 ECHO   = echo
