--- a/pb1/makefile
+++ b/pb1/makefile
@@ -17,17 +17,17 @@ Print                  = @echo
 Copy                   = cp
 CCompiler              = gcc-11
 CppCompiler            = gcc-11
-COptions               = -m64 
+COptions               = 
 Linker                 = gcc-11
 #LinkOptions            = -L/Users/gfenton/Downloads/jobs/ERT-Jobs/evaluation/pb1/iri
-LinkOptions            = -m64
+LinkOptions            = 
 MakeDepend             = makedepend
 MakeDir                = mkdir -p
 Delete                 = rm -fr
 StaticArchiver         = ar
 DynamicArchiver        = gcc-11
 FortranCompiler        = gfortran
-FortranOptions         = -m64
+FortranOptions         = 
 WordCount              = wc
 List                   = cat
 
